Add prod config, enable compressor

--- a/app/churchill/static/less/base.less
+++ b/app/churchill/static/less/base.less
@@ -1,3 +1,9 @@
+@color-primary      : #8021ba;
+@color-primary-dark : #330838;
+@color-accent       : #0d818e;
+@color-accent-dark  : #0d323f;
+
+
 body {
     position: relative;
     font-family: Roboto, Arial, Helvetica, serif;
