--- a/app/churchill/static/less/base.less
+++ b/app/churchill/static/less/base.less
@@ -1,8 +1,4 @@
-@color-primary      : #8021ba;
-@color-primary-dark : #330838;
-@color-accent       : #0d818e;
-@color-accent-dark  : #0d323f;
-
+@import 'vars';
 
 body {
     position: relative;
