--- a/app/churchill/static/less/mdl.less
+++ b/app/churchill/static/less/mdl.less
@@ -1,4 +1,8 @@
-@import 'vars';
+@color-primary      : #8021ba;
+@color-primary-dark : #330838;
+@color-accent       : #0d818e;
+@color-accent-dark  : #0d323f;
+
 
 .mdl-button {
     &.mdl-button--primary {
@@ -177,5 +181,12 @@
 
     .mdl-radio__outer-circle {
         border: 2px solid @color-accent;
+    }
+}
+
+.material-icons {
+    img {
+        min-width: 100%;
+        max-width: 100%;
     }
 }
