--- a/app/churchill/templates/shots/list.html
+++ b/app/churchill/templates/shots/list.html
@@ -1,4 +1,4 @@
-<div class="mobile-container">
+<div class="container mobile-container">
     <h2>Your Latest shots</h2>
     <div id="shot-list" class="mdl-grid"></div>
 </div>
