--- a/app/churchill/static/less/mdl.less
+++ b/app/churchill/static/less/mdl.less
@@ -71,17 +71,21 @@
         color: #333;
         background: #FFF;
 
-        .mdl-textfield {
-            .mdl-textfield__input {
-                color: #333;
-                border-bottom: 1px solid #CCC;
-            }
+        .plate-wrapper {
+            width: 100%;
 
-            .mdl-textfield__label {
-                color: #333;
+            .mdl-textfield {
+                .mdl-textfield__input {
+                    color: #333;
+                    border-bottom: 1px solid #CCC;
+                }
 
-                &:after {
-                    background-color: @color-accent;
+                .mdl-textfield__label {
+                    color: #333;
+
+                    &:after {
+                        background-color: @color-accent;
+                    }
                 }
             }
         }
