Fix sortable events

--- a/app/churchill/static/less/base.less
+++ b/app/churchill/static/less/base.less
@@ -176,8 +176,8 @@ form {
     display: block;
     right: 0;
     bottom: 0;
-    margin-right: 16px;
-    margin-bottom: 16px;
+    margin-right: 1.5em;
+    margin-bottom: 1.5em;
     z-index: 900;
 }
 
@@ -344,7 +344,7 @@ form {
     margin: 0.5em auto;
 
     li.mdl-list__item {
-        padding: 0.5em 0;
+        padding: 0.8em 0;
         border-bottom: 1px solid #CCC;
 
         &:last-child {
