--- a/app/churchill/static/less/responsive/phone.less
+++ b/app/churchill/static/less/responsive/phone.less
@@ -17,6 +17,11 @@
         width: 95%;
     }
 
+    .open-add-shot-form {
+        margin-right: 1em;
+        margin-bottom: 1em;
+    }
+
     .mobile-container {
         padding: 0.5em;
 
