--- a/app/churchill/templates/handlebars/shot-type.html
+++ b/app/churchill/templates/handlebars/shot-type.html
@@ -5,7 +5,7 @@
         <span class="mdl-list__item-primary-content">
             <img src="{{ image }}" class="image">
             <span class="shot-title">
-                {{ title }}
+                {{ title }} ({{ degree }}%)
             </span>
         </span>
         <span class="mdl-list__item-secondary-content">
