--- a/churchill/static/css/index.css
+++ b/churchill/static/css/index.css
@@ -1,1 +1,21 @@
-#loader {}
+#loader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.5);
+  z-index: 1000;
+}
+
+#loader img {
+  position: relative;
+  top: calc(50% - 50px);
+  left: calc(50% - 50px);
+  width: 100px;
+  height: 100px;
+}
+
+.centered {
+  position: relative;
+}
