--- a/churchill/templates/base.html
+++ b/churchill/templates/base.html
@@ -1,4 +1,4 @@
-{% load i18n static %}
+{% load i18n static core_tags %}
 
 <!DOCTYPE html>
 <html class="no-js" lang="en">
@@ -23,32 +23,20 @@
       <meta property="og:image" content="{% static 'img/favicon.png' %}">
     {% endblock %}
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <!-- Datepicker CSS -->
-    <link href="https://unpkg.com/gijgo@1.9.13/css/gijgo.min.css" rel="stylesheet" type="text/css" />
-    <!-- Core CSS -->
+    <link href="{% static 'css/reset.css' %}" rel="stylesheet" type="text/css" />
+    <link href="{% static 'css/base.css' %}" rel="stylesheet" type="text/css" />
     <link href="{% static 'css/index.css' %}" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
     {% block content %}{% endblock content %}
 
-    <!-- Bootstrap optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-            integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-            crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-            crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-            crossorigin="anonymous"></script>
-    <!-- Datepicker JS -->
-    <script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js"></script>
-
-    {% block extra_js %}{% endblock %}
+    <script type="text/javascript">
+      let MESSAGES = JSON.parse('{{ messages|messages_to_json|safe }}')
+    </script>
+    <script defer src="{% static 'js/external/handlebars.min.js' %}"></script>
+    <script defer src="{% static 'js/widgets/centered.js' %}" type="module"></script>
+    <script defer src="{% static 'js/widgets/loader.js' %}" type="module"></script>
+    <script defer src="{% static 'js/app.js' %}" type="module"></script>
   </body>
 </html>
