--- a/churchill/templates/base.html
+++ b/churchill/templates/base.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, shrink-to-fit=no">
 
-    <meta name="theme-color" content="#ff6f61">
+    <meta name="theme-color" content="#064d69">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="application-name" content="{% translate 'Churchill' %}">
     <meta name="description" content="{% translate 'Application for calculation of alcohol consumption' %}">
