--- a/churchill/templates/index.html
+++ b/churchill/templates/index.html
@@ -8,7 +8,7 @@
   </div>
 
   <nav id="navbar">
-    <a id="show-settings" href="#settings">
+    <a id="show-dashboard" href="#dashboard">
       <img src="{% static 'img/favicon.png' %}" width="30" height="30" />
       {% translate "Churchill" %}
     </a>
@@ -21,5 +21,6 @@
   {% include "handlebars/register.html" %}
   {% include "handlebars/login.html" %}
   {% include "handlebars/dashboard.html" %}
-  {% include "handlebars/add_shot.html" %}
+  {% include "handlebars/settings.html" %}
+  {% include "handlebars/add_shot_item.html" %}
 {% endblock %}
