--- a/churchill/static/css/index.css
+++ b/churchill/static/css/index.css
@@ -69,6 +69,29 @@
   color: #636363;
 }
 
+#calendar-container {
+  display: flex;
+  flex-flow: row wrap;
+}
+
+#calendar-container .date {
+  width: calc(100% / 7);
+  text-align: center;
+}
+
+#calendar-container .date:after {
+  content: " ";
+  display: inline-block;
+  width: 1rem;
+  height: 1rem;
+  border-radius: .5rem;
+  background-color: green;
+}
+
+#calendar-container .date.drunk:after {
+  background-color: red;
+}
+
 #add-shot-item-form .form-row label {
   margin-left: .25rem;
   font-size: 1.25rem;
